2018-November-18 Struan Robertson
		
		* AnalyticalRepresention.cpp, MesmerMath.h/.cpp: Initial implementation toward the 
		inclusion of species thermodynamic data in Cantera/ChemKin output.  

2018-November-16 Robin Shannon
		
		* Documentation update.

2018-November-13 Struan Robertson

		* CollisionOperator.h/.cpp: Fix for population instability problem.

		* MesmserFlags.h/.cpp: Added trace weighting flag.

		* Baseline updates.

2018-November-10 Struan Robertson

		* ConditionManager.cpp, System.cpp: Changes to allow for the weighting of trace data.

		* MesmerMaths.cpp: Fix for convolution bug.

		* System.h: Version update.

		* MolecularComponent.cpp: Tidy-up.

		* Documentation re-versioning and update.

2018-October-31 Struan Robertson

		* DensityOfStates.cpp, gStructure.cpp, MolecularComponents.h/.cpp: Generalized the fix
		for atomic multiplicity made on 07/May/2018.

		* ConditionsManager.cpp: Extended the "PTset" method to specify a reaction interest.

		* UnitConversion.cpp: Added GHz as an energy unit.

2018-June-07 Struan Robertson

		* UnitTest.cpp: Added test for normal distribution.

		* Methyl_H_to_Methane_FTST_rev.xml, Methyl_H_to_Methane_FTST_irrer.xml: Updated tests
		to a larger range of temperatures.

2018-May-07 Struan Robertson

		* CollisionOperator.cpp: Code added to estimate equilibrium populations when the linear 
		algebra method returns zero because of machine precision.

		* gStructure.cpp: Fix for atomic multiplicity bug and baseline update.

2018-April-24 Struan Robertson

		* gDensityOfStates.cpp: Fix for parse only bug.

2018-April-22 Struan Robertson

		* main.cpp: Fix for incorrect file changes when run in parallel.

		* Makefile: Corrected for missing source fule.

		* Baseline updates.

2018-April-18 Chris Morley

		* Collision Operator.cpp: ensure the eigenvalue closeness warning is written to both
		  console and log file.
		* examples/AnalyticalRepresentation/Plog.xml,