@@ -171,6 +171,7 @@
     <ClCompile Include="..\..\src\plugins\FourierGrid1D.cpp" />
     <ClCompile Include="..\..\src\plugins\GaussianModel.cpp" />
     <ClCompile Include="..\..\src\plugins\gridsearch.cpp" />
+    <ClCompile Include="..\..\src\plugins\HighPressureRateCoefficients.cpp" />
     <ClCompile Include="..\..\src\plugins\HinderedRotorCM1D.cpp" />
     <ClCompile Include="..\..\src\plugins\HinderedRotorQM1D.cpp" />
     <ClCompile Include="..\..\src\IrreversibleExchangeReaction.cpp" />
