@@ -1,0 +1,67 @@
+
+            /|      /|                        \   
+           / |     / | ________________________\  
+          /  |    /  |  _   _             _   _   
+         /   |   /   | / \ / \ |\     /| / \ / \  
+        /    |  /    | \_/ \_  | \   / | \_/ |_/  
+       /     | /     | /     \ |  \ /  | /   | \  
+    \_/      |/      | \_/ \_/ |   V   | \_/ |  \ 
+
+     Mesmer: Master Equation Solver for Multi-Energy well Reactions
+     Mesmer v5.2 compiled: -- Nov 18 2018 -- 16:47:17
+
+     Copyright (C) 2009-2018 by
+     Struan H. Robertson, Chris Morley, Chi-Hsiu Liang,
+     David R. Glowacki, Michael J. Pilling and contributors
+
+     Mesmer is free software: you can redistribute it and/or modify
+     it under the terms of the GNU Public License as published by
+     the Free Software Foundation, either version 2 of the License,
+     or (at your option) any later version.
+
+     But WITHOUT ANY WARRANTY; without even the implied warranty of
+     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+     GNU Public License for more details.
+
+    You should have received a copy of the GNU Public License
+    along with Mesmer.  If not, see <http://www.gnu.org/licenses/>.
+
+                     Platform:        Windows
+                     Execution Date:  Sun Nov 18 19:09:45 2018
+                     Number of ranks: 1
+
+defaults.xml, librarymols.xml are in ../..
+
+Parsing input xml file...
+Methyl_O_to_Methoxy.xml
+
+--Parse data for HighPressureRateCoefficients
+Energy convention "" written to <moleculeList>
+In R1: Parsing reaction...Association reaction
+In Methoxy: Rotational constants were calculated from atom coordinates: 0.941928 0.942088 5.22904 cm-1
+In Methoxy: The default value of me:DistributionCalcMethod was used.
+In Methoxy: --Parse data for Boltzmann
+In Methoxy: --Parse data for ExponentialDown
+In R1: --Parse data for MesmerILT
+In R1: The default value of me:TInfinity was used.
+In R1: No tunneling method used for R1
+In R1: Not a unimolecular reaction: look for excess reactant concentration.
+In R1: No value of me:excessReactantConc was supplied and the default value NEEDS TO BE CHECKED**
+25.1Torr, 301K at dd precision with He
+The default value of me:ForceMacroDetailedBalance was used.
+Write metadata 20181118_190945
+
+File: "Methyl_O_to_Methoxy.xml" successfully parsed.
+Main Calculation begins
+Now calculating...
+
+--Execute calcMethod HighPressureRateCoefficients
+Number of grains produced is not equal to that requested
+Number of grains requested: 250
+Number of grains produced : 2
+In FastLaplaceConvolution: 40 values in the FFT convolution routine were replaced by standard convolution
+Association ILT calculation completed
+ -- Total time elapsed: 35 seconds.
+
+System saved to mesmer_out.xml
+Total time elapsed: 35 seconds.
